clusters/pixelated-backup/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pixelated-service
  namespace: pixelated
  labels:
    app: pixelated-app
spec:
  selector:
    app: pixelated-app
  ports:
    - name: http
      port: 80
      targetPort: 4321
      protocol: TCP
  type: ClusterIP
